Fix opening a note on small screens

--- a/scss/editor.scss
+++ b/scss/editor.scss
@@ -3,18 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	overflow: hidden;
-
-	@media only screen and ( max-width: 520px ) {
-		flex: 0 0 100%;
-		background: $white;
-		transition: $anim-transition;
-		transform: translate3d(0, 0, 0);
-
-		.note-open & {
-			transform: translate3d(-100%, 0, 0);
-			transition-property: transform;
-		}
-	}
+	background: $white;
 
 	.note-toolbar {
 		flex: none;
