--- a/scss/general.scss
+++ b/scss/general.scss
@@ -38,12 +38,24 @@ img, svg {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	-webkit-transform: translateX(0px);
 	transform: translateX(0px);
-	-webkit-transition: -webkit-transform 200ms ease-in-out;
 	transition: transform 200ms ease-in-out;
 
 	.note-editor {
 		flex: 1 1 auto;
+	}
+
+	@media only screen and ( max-width: 520px ) {
+		.note-editor {
+			flex: 1 0 100%;
+			width: 100%;
+			transition: $anim-transition;
+			transform: translate3d(0, 0, 0);
+		}
+
+		&.note-open .note-editor {
+			transform: translate3d(-100%, 0, 0);
+			transition-property: transform;
+		}
 	}
 }
